#
# Use this configuration file to control what RobotPy packages are installed
# on your RoboRIO
#

[tool.robotpy]

# Version of robotpy this project depends on
robotpy_version = "2025.3.2.1"

# Which extra RobotPy components should be installed
# -> equivalent to `pip install robotpy[extra1, ...]
robotpy_extras = [
    # "all",
    # "apriltag",
    "commands2",
    # "cscore",
    # "navx",
    "pathplannerlib",
    # "phoenix5",
    # "photonvision",
    # "playingwithfusion",
    # "rev",
    # "romi",
    # "sim",
    # "xrp",
]

# Other pip packages to install
requires = [
    "phoenix6~=25.2"
]


[project]
name = "Summer2025"
version = "0.0.0"
description = "The TriSoncis 2025 Robot Code Summer redo Command Based"
authors = [{ name = "The TriSonics", email = "contact@allendalerobotics.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.14"

dependencies = [
    "numpy~=2.1",
    "phoenix6~=25.3.0.post1",
    "robotpy[apriltag]==2025.3.2.0",
    "robotpy-wpilib-utilities>=2025.0.0",
    "photonlibpy==2025.1.1",
    "robotpy-pathplannerlib",
    "pip",
]